<resources>
    <string name="app_name">沃视频</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Tab String-->
    <string name="choice_string">推荐</string>
    <string name="new_choice_string">精选</string>
    <string name="live_string">直播</string>
    <string name="classes_string">分类</string>
    <string name="vip_string">VIP会员</string>
    <string name="event_string">活动</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="shrink">shrink</string>

    <string name="action_settings">Settings</string>
    <string name="my_order">我的订单</string>
    <string name="my_integral">我的积分</string>
    <string name="history_string">观看历史</string>
    <string name="cache_offline">离线缓存</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_tag">我的标签</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="search_hint">请输入搜索内容</string>
    <string name="collect">收藏</string>

    <!--开通vip-->
    <string name="open_vip">开通VIP</string>
    <string name="username">帐号:189****2323</string>
    <string name="validity">有效期:2016-08-01</string>
    <string name="day_of_vip">订购沃视频会员</string>
    <string name="price">￥8.00/月</string>
    <string name="buying">购买</string>
    <string name="abort_service">终止服务</string>
    <!-- 活动-->
    <string name="tv_name">会员免费抢流量</string>
    <string name="tv_time">2016-06-11-2016-06-11</string>
    <!--关于 -->
    <string name="about">关于</string>
    <string name="service_number">联系电话</string>
    <string name="version_hint">版本号</string>

    <!--设置-->
    <string name="set_top">设置</string>
    <string name="skin_manager">皮肤管理</string>
    <string name="clean_cache">清除缓存</string>
    <string name="opinion_reback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="about_bottom_hint">联通公司版权所有@ 1998-2006</string>
    <string name="share">分享</string>
    <string name="projection">投屏</string>
    <string name="anthology">选集</string>
    <string name="recommend">推荐</string>
    <string name="like">点赞</string>
    <string name="movie">电影</string>
    <string name="sport">体育</string>
    <string name="live">直播</string>
    <string name="teleplay">电视剧</string>
    <string name="variety">综艺</string>
    <string name="hint_login_account">请输入您的手机号</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="regist_account">注册账号</string>
    <string name="hint_login_pwd">请输入密码</string>
    <string name="hint_regist_validate">验证码</string>
    <string name="get_validate">获取验证码</string>
    <string name="hint_regist_pwd_t">重复密码</string>
    <string name="regist_bottom_hint">注册即视为同意</string>
    <string name="regist_protocal_name">App用户协议</string>
    <string name="p_logo" >头像</string>
    <string name="nick_name">昵称</string>
    <string name="sex_string">性别</string>
    <string name="male">男</string>
    <string name="email_string">邮箱</string>
    <string name="unbind_email">暂未绑定邮箱</string>
    <string name="modify_pwd">修改密码</string>
    <string name="person_info_top">个人信息</string>
    <string name="recallback_hint">我们的进步离不开您的每一个建议，期待您的声音。</string>
    <string name="callback_count_hint">0/200</string>
    <string name="callback_contact_way">请输入您的手机/QQ/邮箱，方便我们联系你</string>
    <string name="bref_string">简介</string>
    <string name="director">导演:</string>
    <string name="program_string">节目单</string>
    <string name="program">频道</string>

    <string name="second_back_hint">再按一次退出程序</string>

    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="cancel_string">取消</string>
    <string name="all_string">全部</string>
    <string name="search_result_string">搜索结果</string>
    <string name="type_string">类型</string>

    <!--Video 相关-->
    <string name="storage_permission_denied">存储读取权限被拒绝</string>

    <string name="lockscreen_transport_play_description">Play</string>
    <string name="lockscreen_transport_pause_description">Pause</string>
    <string name="description">description</string>
    <string name="had_account_str">已有账号</string>
    <string name="hint_regist_pwd">密码 (4-16位)</string>
    <string name="localTv">地方台</string>
    <string name="sinatv">卫视</string>
    <string name="cctv">央视</string>
    <string name="other_string">专业</string>
    <string name="unlogin_hint">尚未登录</string>
    <string name="plz_search_hint">请输入搜索内容</string>
    <string name="plz_comment_hint">请输入评论</string>
    <string name="comment">评论</string>
    <string name="no_comment_data">暂无评论</string>
    <string name="free_network">已免流</string>
    <string name="no_login_toast">亲,您尚未登陆,请登陆后使用此功能吧!</string>

    <!--一意见征集-->
    <string name="option_content">输入的内容不能为空哦</string>
    <string name="option_content_toast">您输入的内容超过200字了</string>
    <string name="option_phone">输入的联系方式不能为空</string>
    <string name="option_phone_toast">请输入正确的QQ/电话/邮箱</string>
    <string name="text_watch">您输入的内容即将超过限制了</string>
    <string name="success_toast">您的意见已经提交成功,感谢您的参与</string>
    <string name="select_all">全选</string>
    <string name="delete">删除</string>
    <!--修改密码-->
    <string name="input_new_pwd">输入新密码</string>
    <string name="update_pwd">修改密码</string>
    <string name="inputpassword">输入密码</string>
    <string name="inputoldpassword">原密码   </string>
    <string name="confirmpassword">确认密码</string>
    <string name="finish">完成</string>
    <string name="next">下一步</string>
    <string name="find_pwd">找回密码</string>
    <string name="find_phone_hint">请输入您的手机号</string>
    <string name="find_yzm">请输入验证码</string>
    <string name="send_yzm">发送验证码</string>

    <!--取消收藏-->
    <string name="cancel_collect_failed">取消收藏失败</string>
    <string name="cancel_collect_success">取消收藏成功</string>
    <string name="got_it">知道了</string>
    <string name="register_hint">新用户注册送全站免流量观看</string>
    <string name="network">当前已免%d MB流量</string>
    <string name="empty_video_list">Ops,暂时没有视频,试试别的类别吧</string>


    <string name="open_success">开通成功</string>
    <string name="open_failed">开通失败</string>
    <string name="main_page_toast">注册/登录, 全站免流量观看视频</string>
    <string name="expand">展开</string>

    <!--定位提示-->
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="channel_string">频道列表</string>
    <string name="olympic_string">里约GO</string>

    <!-- 个性化设置-->
    <string name="personality_set">个性化</string>
    <string name="mine_set">我的频道</string>
    <string name="all_set">频道栏目</string>

    <string name="no_data">无数据</string>
</resources>
