<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/layout_person_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_history"
            style="@style/mine_info_text"
            android:drawableLeft="@drawable/icon_history"
            android:text="@string/history_string" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/list_view_divider" />

        <TextView
            android:id="@+id/tv_collect"
            style="@style/mine_info_text"
            android:drawableLeft="@drawable/icon_collect_press"
            android:text="@string/my_collect" />


        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/list_view_divider" />


        <TextView
            android:id="@+id/tv_mine_tag"
            style="@style/mine_info_text"
            android:drawableLeft="@drawable/icon_label"
            android:text="@string/my_tag" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/list_view_divider" />


        <TextView
            android:id="@+id/tv_order"
            style="@style/mine_info_text"
            android:drawableLeft="@drawable/icon_order"

            android:text="@string/my_order" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/list_view_divider" />

        <TextView
            android:id="@+id/tv_active"
            style="@style/mine_info_text"
            android:drawableLeft="@drawable/icon_event"
            android:text="热门活动" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/list_view_divider" />


    </LinearLayout>

</LinearLayout>