<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.lt.hm.wovideo.widget.SecondTopbar
        android:id="@+id/set_topbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/s_46"
        app:CustomtitleTextColor="@color/black"
        app:CustomtitleTextSize="@dimen/f_16"
        app:Customtoptitle="@string/set_top"
        app:leftBackGround="@drawable/left_arrow"
        app:rightBackGround="@drawable/left_arrow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:layout_marginTop="20dp"
        android:background="@color/gray_dark"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/skin_manager"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            >

            <TextView
                style="@style/person_menu_text"
                android:layout_alignParentLeft="true"
                android:paddingLeft="20dp"
                android:text="@string/skin_manager" />

            <ImageView style="@style/set_menu_img" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color" />

        <RelativeLayout
            android:id="@+id/clean_cache"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="50dp">

            <TextView
                style="@style/person_menu_text"
                android:layout_alignParentLeft="true"
                android:paddingLeft="20dp"
                android:text="@string/clean_cache" />

            <ImageView
                android:id="@+id/cache_right_arrow"
                style="@style/set_menu_img" />

            <TextView
                android:id="@+id/cache_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/cache_right_arrow"
                android:text="20MB"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color" />

        <RelativeLayout
            android:id="@+id/opinion_reback"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            >

            <TextView
                style="@style/person_menu_text"
                android:layout_alignParentLeft="true"
                android:paddingLeft="20dp"
                android:text="@string/opinion_reback" />

            <ImageView style="@style/set_menu_img" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color" />

        <RelativeLayout
            android:id="@+id/about_us"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            >

            <TextView
                style="@style/person_menu_text"
                android:layout_alignParentLeft="true"
                android:paddingLeft="20dp"
                android:text="@string/about_us" />

            <ImageView style="@style/set_menu_img" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:layout_gravity="bottom"
        android:id="@+id/logout"
        android:layout_marginTop="@dimen/s_1"
        android:background="@color/white"
        android:textColor="@color/red_btn_bg_color"
        android:text="@string/logout"
        />

</LinearLayout>