<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/font_gray"
    android:orientation="vertical">

    <com.lt.hm.wovideo.widget.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/program_string" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/font_gray" />

        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/live_programs_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_widthPercent="20%">

                <Button
                    android:id="@+id/live_btn_cctv"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:background="@color/blue_btn_bg_color"
                    android:text="@string/cctv"

                    android:textColor="@color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_lighter1" />

                <Button
                    android:id="@+id/live_btn_sina"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:background="@color/gray_lighter"
                    android:text="@string/sinatv"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_lighter1" />

                <Button
                    android:id="@+id/live_btn_local"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:background="@color/gray_lighter"

                    android:text="@string/localTv"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_lighter1" />

                <Button
                    android:id="@+id/live_btn_othertv"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:background="@color/gray_lighter"
                    android:text="@string/other_string"
                    android:textColor="@color/black" />
            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/gray_lighter1" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/live_program_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/live_programs_layout"
                android:background="@color/gray_btn_bg_color"
                app:layout_widthPercent="80%" />
        </android.support.percent.PercentRelativeLayout>

    </com.lt.hm.wovideo.widget.PercentLinearLayout>


</LinearLayout>