<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.lt.hm.wovideo.widget.SecondTopbar
        android:id="@+id/open_vip_topbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/s_46"
        app:CustomtitleTextColor="@color/black"
        app:CustomtitleTextSize="@dimen/f_16"
        app:Customtoptitle="@string/open_vip"
        app:leftBackGround="@drawable/left_arrow"
        app:rightBackGround="@drawable/left_arrow" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@android:color/darker_gray"></View>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
    <LinearLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content">
        <com.lt.hm.wovideo.widget.CircleImageView
            android:id="@+id/img_photos"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_centerInParent="true"
            android:src="@drawable/icon_head"
            app:border_width="2dp"
            app:border_color="@color/white" />
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/username"
                    android:layout_gravity="center_vertical"
                    android:text="@string/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:id="@+id/img_king"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/icon_vip_opened"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView
                android:id="@+id/tv_validity"
                android:text="@string/validity"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@android:color/darker_gray"></View>
    <LinearLayout
        android:orientation="horizontal"
        android:padding="10dp"
        android:id="@+id/open_get_vip_layout"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_day_of_vip"
            android:layout_weight="0.6"
            android:text="@string/day_of_vip"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_price"
            android:layout_weight="0.2"
            android:text="@string/price"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <!--<Button-->
            <!--android:id="@+id/btn_buying"-->
            <!--android:background="@android:color/holo_blue_dark"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:layout_weight="0.2"-->
            <!--android:text="@string/buying"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->

        <ImageView
            android:id="@+id/btn_buying"
            android:src="@drawable/btn_p_blue"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_vip_opened"
        android:id="@+id/img_vip_authers"
        />


    <Button
        android:id="@+id/btn_abort_service"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:background="@drawable/btn_abort_service"
        android:textColor="@color/btn_abort_service"
        android:text="@string/abort_service"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>